ensure dark mode toggle takes precedence over user preffering light mode

--- a/src/scss/_dark-mode.scss
+++ b/src/scss/_dark-mode.scss
@@ -9,7 +9,7 @@
   }
 }
 
-.-dark-mode {
+body.-dark-mode {
   --bgColorPrimary: #f6f6fa;
   --bgColorSecondary: #d195e5;
   --bgColorAccent: #80d5ac;
